tests/ui/delegation/ice-isssue-128190.rs
#![feature(fn_delegation)]
#![allow(incomplete_features)]

fn a(&self) {}
//~^ ERROR `self` parameter is only allowed in associated functions

reuse a as b;

fn main() {}
